force-app/main/default/objects/Checklist_Item__c/fields/Answer__c.field-meta.xml
<CustomField>
    <fullName>Answer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Answer</label>
    <type>Checkbox</type>
</CustomField>