force-app/main/default/objects/Checklist_Item__c/fields/EYI_Area__c.field-meta.xml
<CustomField>
    <fullName>EYI_Area__c</fullName>
    <label>Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Main Entry Gate</fullName>
            </value>
            <value>
                <fullName>Service Gate</fullName>
            </value>
            <value>
                <fullName>Garage</fullName>
            </value>
            <value>
                <fullName>Water Body</fullName>
            </value>
            <value>
                <fullName>Pantry Area</fullName>
            </value>
            <value>
                <fullName>Internal Area</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>