force-app/main/default/objects/Checklist_Item__c/fields/EYI_CHIF__c.field-meta.xml
<CustomField>
    <fullName>EYI_CHIF__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CHIF</label>
    <referenceTo>EYI_CHIF__c</referenceTo>
    <relationshipLabel>Checklist Items</relationshipLabel>
    <relationshipName>Checklist_Items</relationshipName>
    <type>Lookup</type>
</CustomField>