force-app/main/default/objects/Checklist_Item__c/fields/EYI_Sequence_No__c.field-meta.xml
<CustomField>
    <fullName>EYI_Sequence_No__c</fullName>
    <label>Sequence No</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>