force-app/main/default/objects/Checklist_Item__c/fields/EYI_Status__c.field-meta.xml
<CustomField>
    <fullName>EYI_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Status</label>
    <type>Checkbox</type>
</CustomField>