force-app/main/default/objects/Checklist_Item__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sales Checklist</fullName>
            </value>
            <value>
                <fullName>Welcome Call Checklist</fullName>
            </value>
            <value>
                <fullName>Registration Checklist</fullName>
            </value>
            <value>
                <fullName>Duly Filled Booking Form</fullName>
            </value>
            <value>
                <fullName>Duly Signed Booking Form &amp; Proposal</fullName>
            </value>
            <value>
                <fullName>Pre Cancellation</fullName>
            </value>
            <value>
                <fullName>Post Cancellation</fullName>
            </value>
            <value>
                <fullName>CHIF</fullName>
            </value>
            <value>
                <fullName>Invoice</fullName>
            </value>
            <value>
                <fullName>Post Registration with Loan</fullName>
            </value>
            <value>
                <fullName>Admin Checklist</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>